# matrix-open-sesame

./: Cargo.toml  example.toml
src/: main.rs
